# server/src/models/requests/feed.ts
@@ -1,7 +1,13 @@
 export interface IFeedRequestBody {
     page: number
-    pageSize: number
+    pageSize: number,
+    location: ILocationInfo
     tags?: string[]
+}
+
+export interface ILocationInfo {
+    lat:number,
+    lon:number
 }
 
 
